fix(github): broken bg on smaller pages (#172)

--- a/styles/github/catppuccin.user.css
+++ b/styles/github/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name           Github Catppuccin
 @namespace      github.com/catppuccin/userstyles/styles/github
 @homepageURL 	https://github.com/catppuccin/userstyles/tree/main/styles/github
-@version        1.2.3
+@version        1.2.4
 @description    Soothing pastel theme for GitHub
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/userstyles/raw/main/styles/github/catppuccin.user.css
@@ -219,7 +219,8 @@
 
     &,
     & body {
-	  accent-color: @accent-color;
+	    accent-color: @accent-color;
+      --bgColor-default: @base;
       --color-canvas-default-transparent: rgba(13, 17, 23, 0);
       --color-page-header-bg: @base;
       --color-marketing-icon-primary: @sky;
